# QML_Previewer

./: CMakeLists.txt  CMakeUserPresets.json  README.md  app_icon.rc  build.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  util.cpp  util.h
QCodeEditor/src/internal/: QCodeEditor.cpp
page/: pagescripting.cpp  pagescripting.h  pagescripting.ui
res/: res.qrc
res/qml/: DynamicLoader.qml  Empty.qml
widget/: scripteditor.cpp  scripteditor.h  scripteditor.ui
